Call WebStateObserver::FaviconUrlUpdated for same-document navigations.

WebStateImpl will cache favocon urls in OnFaviconUrlUpdated and will
call WebStateObserver::FaviconUrlUpdated in OnNavigationFinished for
same document navigaitons.

Also removed favicon urls caching in WebFaviconDriver introduced in
crrev.com/c/695761. This CL is not exactly a revert of
crrev.com/c/695761, because deprecated NavigationItemCommitted is
replaced with DidFinishNavigation. NavigationItemCommitted is not
called for push/replace state same-document navigaiton, which may
cause other bugs for favicons caching.


Bug: 788708,769049
Change-Id: I42922ab4d7812380787e350713640efe4d599680